Fixed ListDBUS dark mode

--- a/cockpit/IPC/src/views/IPC.css
+++ b/cockpit/IPC/src/views/IPC.css
@@ -16,7 +16,6 @@
    display: flex;
    flex-direction: column;
    align-items: center;
-   min-height: calc(100vh - 3.5rem);
 }
 
 .MuiFormControl-root {
